# internal/model/user.go
@@ -1,0 +1,8 @@
+package model
+
+type User struct {
+	ID       string `gorm:"primaryKey" json:"id"`
+	Name     string `json:"name"`
+	Email    string `json:"email" gorm:"unique"`
+	Password string `json:"-"`
+}
