# internal/routes/router.go
@@ -1,9 +1,11 @@
 package routes
 
 import (
-	"auth-app/controllers"
 	"auth-app/docs"
-	"auth-app/middleware"
+	"auth-app/internal/handler"
+	"auth-app/internal/middleware"
+	"auth-app/internal/repository"
+	"auth-app/internal/service"
 	"time"
 
 	"github.com/gin-contrib/cors"
@@ -15,7 +17,7 @@ import (
 )
 
 func SetupRoutes(r *gin.Engine, db *gorm.DB) {
-	c := &gin.Context{}
+	// c := gin.Context{}
 
 	// apply middleware CORS
 	r.Use(cors.New(cors.Config{
@@ -28,9 +30,13 @@ func SetupRoutes(r *gin.Engine, db *gorm.DB) {
 
 	docs.SwaggerInfo.BasePath = ""
 
+	repo := repository.NewUserRepository(db)
+	srv := service.NewUserService(repo)
+	h := handler.NewUserHandler(srv)
+
 	// Public Routes
-	r.POST("/login", controllers.LoginHandler(db))
-	r.POST("/register", controllers.RegisterHandler(db))
+	r.POST("/register", h.Register)
+	r.POST("/login", h.Login)
 
 	//swagger
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
@@ -38,7 +44,7 @@ func SetupRoutes(r *gin.Engine, db *gorm.DB) {
 	// Protected Routes - Require JWT
 	protected := r.Group("/api/v1")
 	protected.Use(middleware.JWTMiddleware())
-	protected.GET("/GetCurrentUser", controllers.GetCurrentUser(db))
-	protected.PUT("/UpdateUser/:id", controllers.UpdateUser(db, c))
-	protected.DELETE("/DeleteUser/:id", controllers.DeleteUser(db, c))
+	// protected.GET("/GetCurrentUser", handler.GetCurrentUser(db))
+	// protected.PUT("/UpdateUser/:id", handler.UpdateUser(db, c))
+	// protected.DELETE("/DeleteUser/:id", handler.DeleteUser(db, c))
 }
